@@ -661,7 +661,7 @@ L<http://skim.cz/>
 
 =head1 LICENSE AND COPYRIGHT
 
-© 2005-2018 Michal Josef Špaček
+© 2005-2020 Michal Josef Špaček
 
 BSD 2-Clause License
 
