@@ -4,6 +4,7 @@
  - Improve SYNOPSIS section in doc.
  - Remove helper get_stdout.inc in tests.
  - Rename test files to better version (tag → element).
+ - Update copyright years.
 
 0.07 2018-01-23T11:27:58+01:00
  [Common]
